--- a/app/src/components/State.module.css
+++ b/app/src/components/State.module.css
@@ -1,3 +1,8 @@
+.host {
+  display: flex;
+  gap: 5px;
+}
+
 .state {
   font-size: 15px;
 }
@@ -17,4 +22,24 @@
 .value {
   margin-left: 5px;
   color: var(--color-text-dimmed);
+}
+
+.spinner {
+  width: 18px;
+  height: 18px;
+  border: 2px solid var(--color-text-dimmed);
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
